changed nav to have fixed height on mobile

--- a/website/assets/styles/nav.scss
+++ b/website/assets/styles/nav.scss
@@ -33,7 +33,7 @@
     @media only screen and (max-width: 768px) {
         
         justify-content: center;
-        min-height: 40px;
+        height: 40px;
 
         .site-logo {
             display: none;
